--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.8.3
 click==8.2.1
 dnspython==2.7.0
 dotenv==0.9.9
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.1
 h11==0.16.0
@@ -14,10 +15,16 @@ idna==3.10
 lxml==6.0.1
 Mako==1.3.10
 MarkupSafe==3.0.2
+passlib==1.7.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SpiffWorkflow==3.1.1
 SQLAlchemy==2.0.43
