--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,43 @@
+aiosmtplib==5.1.0
 alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.10.0
+blinker==1.9.0
 certifi==2025.8.3
+cffi==2.0.0
 click==8.2.1
+cryptography==46.0.5
 dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.1
-email_validator==2.2.0
+email-validator==2.3.0
 fastapi==0.116.1
+fastapi-mail==1.6.2
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+Jinja2==3.1.6
 lxml==6.0.1
 Mako==1.3.10
 MarkupSafe==3.0.2
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pydantic==2.11.7
-pydantic_core==2.33.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.13.1
+pydantic_core==2.41.5
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
+regex==2025.11.3
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 SpiffWorkflow==3.1.1
 SQLAlchemy==2.0.43
 starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 uvicorn==0.35.0
